# interviews

./: README.md
coding_tips/: ABC.py  README.md  thread.py
coding_tips/design_pattern/: README.md  factory_pattern.py
coding_tips/lightgbm/: advanced_example.py
coding_tips/lightgbm_test/: README.md  advanced_example.py  inference.py  optuna_test.py  train_example.py  trainer.py
coding_tips/lightgbm_test/analysis/: statistic.py
coding_tips/lightgbm_test/config/: infer.yaml  training.yaml
coding_tips/lightgbm_test/data/: train_data.json
coding_tips/lightgbm_test/hparams/: data_args.py  inference_args.py  parser.py  training_args.py
coding_tips/lightgbm_test/saves/high_diamond/: model.json  model.pkl  model.txt
coding_tips/tests/: test_client.py  test_vector.py
email-assistant-api/: emailassistant.db  pyproject.toml
email-assistant-api/app/: crud.py  database.py  helper.py  main.py  models.py  routes.py  schemas.py
language_model/: GQA.ipynb  Lora.ipynb  README.md  decoder.py  transformers.py
language_model/model_structure/layer_norm/: readme.md
leetcode/: Aho-Corasick.ipynb  Boyer Moore.ipynb  DFS.ipynb  Horspool.ipynb  KMP.ipynb  leetcode.ipynb  单模式串匹配.ipynb  图结构.ipynb  算法.ipynb  背包问题.ipynb
llama_factory/: test.py  vllm_infer.py
research/: LLM_module.md  PPO.md  RFt.md  RL.md  gptcache.md  j.md  phidata.md  扣子.md
utils/: cuda_related.py  test.py
